-issue#1665: Must change password not working for local users when main realm is not local
-issue#1669: Console log header grammar issue
-issue#1674: Threads and Processes values not migrated to Poller table during upgrade
-issue#1676: Allow automation discovery to add the same sysname on different hosts
-issue#1682: Slow Select Statement lib/api_automation.php
-issue#1690: Report a warning if the default collation is not utf8mb4_unicode_ci
-issue#1700: Mail sent without auth causes errors to appear in logs
-issue#1710: RRDtool create command causes first update to fail
-issue#1721: Console Side Bar not correct on first login
-issue#1723: die() messages should include PHP_EOF for better logging
-issue#1726: Poor page performance editing a Graphs Graph Items
-issue#1746: Poller with no hosts does not exit until timeout is reached
-issue#1761: Graph Management page shows bogus template names
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-feature#122: Support a Site Branch Type
-feature#289: Allow external nologin access for Realtime Graphs
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1282: Email notification for Automation Network discovery process
-feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
-feature#1399: Allow 'requires' to include version against a plugin
-feature#1400: User settings should have checkbox to enable overriding of global settings
-feature#1422: Automatically select the next unused data input field when clicking add on data input method
-feature#1428: Graphs: Add more information to error image